test_regress/t/t_unopt_combo_bad.out
%Warning-UNOPTFLAT: t/t_unopt_combo.v:23: Signal unoptimizable: Feedback to clock or circular logic: 't.c'
   wire [31:0]          c;                       
                        ^
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    t/t_unopt_combo.v:23:      Example path: t.c
                    t/t_unopt_combo.v:80:      Example path: ALWAYS
                    t/t_unopt_combo.v:22:      Example path: t.b
                    t/t_unopt_combo.v:123:      Example path: ALWAYS
                    t/t_unopt_combo.v:23:      Example path: t.c
%Error: Exiting due to
